modernize service package (#224)